[package]
name = "idol"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = "0.8"
serde = "1.0"
toml = "0.5.8"
indexmap = {version = "1.7", features = ["serde-1"]}
quote = "1.0"

[workspace]
members = ["runtime"]
