[package]
name = "idol"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = { version = "0.8", default-features = false }
serde = { version = "1.0", default-features = false }
toml = { version = "0.7", default-features = false }
indexmap = {version = "1.7", default-features = false, features = ["serde-1"]}
quote = { version = "1.0", default-features = false }
proc-macro2 = { version = "1.0.74" }
syn = { version = "2.0.52", features = ["full", "parsing", "extra-traits"] }
serde_with = { version = "3.6.1", features = ["macros"] }
prettyplease = "0.2.16"

[workspace]
members = ["runtime"]
