[package]
name = "idol-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
counters = { git = "https://github.com/oxidecomputer/hubris", optional = true, branch = "eliza/auto-count" }
userlib = {git = "https://github.com/oxidecomputer/hubris"}
zerocopy = "0.6.1"
