[package]
name = "idol-runtime"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
counters = { git = "https://github.com/oxidecomputer/hubris" }
userlib = {git = "https://github.com/oxidecomputer/hubris"}
zerocopy = { version = "0.8.25", default-features = false }
zerocopy-derive = "0.8.25"
